<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTagActivity" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- The following is for debug purposes.
        <TextView
            android:id="@+id/phone_id"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/phone_id_empty"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding" />  -->

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_name"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_description"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/latitude"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/latitude_empty"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/longitude"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/longitude_empty"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/time"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/time_empty"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <Button
            android:id="@+id/button_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_gps"
            android:textColor="@color/buttonLabel" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/button_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_picture"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>