<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTagActivity" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/vtag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/vtag_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/vlatitude"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/vlongitude"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <TextView
            android:id="@+id/vtime"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <ImageView
            android:id="@+id/vimage_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/vusername"
            android:padding="@dimen/small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textSize="@dimen/big_text" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_edit"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:background="@color/colorPrimary"
            android:text="@string/button_delete"
            android:textColor="@color/buttonLabel" />

        <Button
            android:id="@+id/button_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_return"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>